try to fix flex issues for pastry page on mobile

--- a/_sass/_layout/_pastries.scss
+++ b/_sass/_layout/_pastries.scss
@@ -13,6 +13,8 @@
   margin: 0 auto;
   text-align: center;
   min-height: 30rem;
+  -webkit-flex: 1 1 50%;
+  flex: 1 1 50%;
 }
 
 .pastries__wrapper--margin {
